# helpdesk

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  groups_fixture.json  pyproject.toml
config/: ckeditor_config.py  settings.py  urls.py
dockerfiles/: entrypoint.sh
dockerfiles/redis/: Dockerfile  init.sh  redis.conf
locale/en/LC_MESSAGES/: django.po
locale/tr/LC_MESSAGES/: django.po
main/: admin.py  forms.py  models.py  paginations.py  serializers.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py
main/templates/: 404.html
main/templates/includes/: inc_header.html  inc_image.html  inc_style.html
main/templates/main/: index.html  task_detail.html  task_form.html  task_list.html
main/templates/main/partials/: task_list_dynamic.html
main/templatetags/: tags.py
nginx_conf/: app.conf
static/css/: bootstrap.min.css  chat_ai.css  fonts.css  form_list.css  img.css  main.css  sign-in.css  theme.css
static/js/: chat_ai.js  fancybox.js  img.js  task_list.js  theme.js
users/: forms.py  models.py  permissions.py  services.py  tasks.py  urls.py  validations.py  views.py
users/management/commands/: auto_translate.py  clean.py  csu.py
users/migrations/: 0001_initial.py
users/templates/: activate.html  login.html
users/templates/users/: developer.html  password_change.html  profile.html  recovery_password.html  update_profile.html  user_form.html
