[tool.poetry]
name = "helpdesk"
version = "0.1.0"
description = ""
authors = ["m.romantsov <romancov_dzr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.1.4"
pillow = "^11.0.0"
django-widget-tweaks = "^1.5.0"
celery = "^5.4.0"
redis = "^5.2.1"
eventlet = "^0.38.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
